# cpp-tknizer

./: CMakeLists.txt  main.cpp  main_simple_tknizer.cpp
include/: tokenizer_config.hpp
